turtleart.lessons.turtleart.Main.House.scala.error
Source:7: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
		avance()
                      ^Source:10: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
	avance()
              ^Source:14: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
		avance()
                      ^