turtleart.lessons.turtleart.Main.House.scala.code
override def run() 
{

	for (n<-1 to 4)
	{
		avance()
		droite(90)
	}
	avance()
	droite(30)
	for (n<-1 to 3)
	{
		avance()
		droite(120)
	}

}
